crates/ark-lsp-core/src/lsp/snapshots/ark_lsp_core__lsp__indexer__tests__index_comment_section.snap
---
source: crates/ark-lsp-core/src/lsp/indexer.rs
assertion_line: 1073
expression: entries
---
[
    IndexEntry {
        key: "Section 1",
        range: Range {
            start: Position {
                line: 1,
                character: 0,
            },
            end: Position {
                line: 1,
                character: 16,
            },
        },
        data: Section {
            level: 1,
            title: "Section 1",
        },
    },
    IndexEntry {
        key: "x",
        range: Range {
            start: Position {
                line: 2,
                character: 0,
            },
            end: Position {
                line: 2,
                character: 1,
            },
        },
        data: Variable {
            name: "x",
        },
    },
    IndexEntry {
        key: "Subsection",
        range: Range {
            start: Position {
                line: 4,
                character: 0,
            },
            end: Position {
                line: 4,
                character: 20,
            },
        },
        data: Section {
            level: 2,
            title: "Subsection",
        },
    },
    IndexEntry {
        key: "y",
        range: Range {
            start: Position {
                line: 5,
                character: 0,
            },
            end: Position {
                line: 5,
                character: 1,
            },
        },
        data: Variable {
            name: "y",
        },
    },
    IndexEntry {
        key: "x",
        range: Range {
            start: Position {
                line: 7,
                character: 0,
            },
            end: Position {
                line: 7,
                character: 1,
            },
        },
        data: Function {
            name: "x",
            arguments: [],
        },
    },
]
