crates/ark-lsp-core/src/lsp/snapshots/ark_lsp_core__lsp__indexer__tests__index_r6class_namespaced.snap
---
source: crates/ark-lsp-core/src/lsp/indexer.rs
assertion_line: 1400
expression: entries
---
[
    IndexEntry {
        key: "initialize",
        range: Range {
            start: Position {
                line: 3,
                character: 8,
            },
            end: Position {
                line: 3,
                character: 18,
            },
        },
        data: Method {
            name: "initialize",
        },
    },
    IndexEntry {
        key: "class",
        range: Range {
            start: Position {
                line: 1,
                character: 0,
            },
            end: Position {
                line: 1,
                character: 5,
            },
        },
        data: Variable {
            name: "class",
        },
    },
]
