crates/ark-lsp-core/src/lsp/snapshots/ark_lsp_core__lsp__indexer__tests__index_variable.snap
---
source: crates/ark-lsp-core/src/lsp/indexer.rs
assertion_line: 1046
expression: entries
---
[
    IndexEntry {
        key: "x",
        range: Range {
            start: Position {
                line: 1,
                character: 0,
            },
            end: Position {
                line: 1,
                character: 1,
            },
        },
        data: Variable {
            name: "x",
        },
    },
    IndexEntry {
        key: "y",
        range: Range {
            start: Position {
                line: 2,
                character: 0,
            },
            end: Position {
                line: 2,
                character: 1,
            },
        },
        data: Variable {
            name: "y",
        },
    },
]
